cors config update for post requests